--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.2;
+  letter-spacing: 0.6px;
 }
 img {
   width: 100%;
