--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -4,12 +4,12 @@
 }
 .secondBanner {
   min-height: 100vh;
-  background: linear-gradient(rgba(4, 4, 5, 0.6), rgba(4, 4, 5, 0.6)),
+  background: linear-gradient(rgba(4, 4, 5, 1), rgba(4, 4, 5, 0.6)),
     url("../Assets/Gaja3d.png") center/cover no-repeat fixed;
 }
 .thirdBanner {
   min-height: 100vh;
-  background: linear-gradient(rgba(4, 4, 5, 0.6), rgba(4, 4, 5, 0.6)),
+  background: linear-gradient(rgba(4, 4, 5, 1), rgba(4, 4, 5, 0.6)),
     url("../Assets/Banner3.jpg") center/cover no-repeat fixed;
 }
 .isBirliklerimiz {
@@ -47,4 +47,107 @@
 .icon {
   height: 100%;
   object-fit: contain;
+}
+.secondBanner {
+  /* border: 3px solid red; */
+  display: grid;
+  place-items: center;
+  color: white;
+}
+.secondBannerContent {
+  /* border: 3px solid white; */
+  padding: 4rem 0;
+  max-width: 1270px;
+  width: 90vw;
+  margin: 0 auto;
+}
+.bannerTitle {
+  color: black;
+  background-color: white;
+  width: fit-content;
+  margin: 0 auto 2rem auto;
+  padding: 0.5rem 0.9rem;
+  border-radius: 10px;
+}
+.headSpace {
+  margin-left: 2rem;
+}
+.thirdBanner {
+  /* border: 3px solid white; */
+  display: grid;
+  place-items: center;
+  color: white;
+}
+.thirdBannerContent {
+  /* border: 3px solid red; */
+  max-width: 1170px;
+  width: 90vw;
+  margin: 0 auto;
+  padding: 4rem 0;
+}
+.services {
+  /* border: 3px solid white; */
+  /* display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr; */
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  text-align: center;
+}
+.services > * {
+  /* border: 3px solid red; */
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+  background: linear-gradient(
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.1)
+  );
+  backdrop-filter: blur(10px);
+  border-radius: 10px;
+  padding: 1rem 0;
+}
+.serviceIcon {
+  font-size: 2.3rem;
+}
+.serviceLinkBtn {
+  text-align: center;
+  margin-top: 2rem;
+}
+.serviceLinkBtn > button {
+  background-color: transparent;
+  border: 3px solid white;
+  padding: 0.4rem 1rem;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  font-size: 1.3rem;
+}
+.serviceLinkBtn > button:hover {
+  background-color: #fff;
+  color: black;
+}
+@media screen and (min-width: 368px) {
+  .services > * {
+    padding: 2rem;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .services {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+  }
+  .services > * {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    column-gap: 1rem;
+    padding: 3rem 2rem;
+  }
 }
