--- a/src/components/SideBar.module.css
+++ b/src/components/SideBar.module.css
@@ -1,11 +1,53 @@
 .sideBar {
-  background-color: white;
+  background-color: #00060f;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: 2;
+  /* border: 3px solid red; */
+  display: grid;
+  place-items: center;
+}
+.sideBarContent {
+  /* border: 3px solid black; */
+}
+.closeIcon {
+  border: 3px solid white;
+  position: absolute;
+  top: 2%;
+  right: 5%;
+  cursor: pointer;
+  border-radius: 5px;
+  color: white;
+  transition: all 0.2s ease-in-out;
+}
+.closeIcon:hover {
+  background-color: white;
+  color: #00060f;
+}
+.closeIcon > * {
+  display: block;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  row-gap: 1rem;
+}
+
+.links > li > a {
+  color: white;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  transition: all 0.2s ease-in-out;
+}
+
+.links > li > a:hover {
+  transform: scale(1.15);
+  color: rgb(167, 167, 255);
 }
 
 @media screen and (min-width: 768px) {
