--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -30,9 +30,9 @@
   /* border: 3px solid red; */
   display: flex;
   flex-direction: column;
-  row-gap: 0.5rem;
+  /* row-gap: 0.5rem; */
   margin-bottom: 1rem;
-  background-color: #d3d3d3;
+  /* background-color: #d3d3d3; */
   padding: 0.5rem;
   border-radius: 10px;
 }
@@ -42,7 +42,37 @@
 }
 .formControl > input {
   height: 32px;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   border: none;
   padding-left: 0.2rem;
+  border-bottom: 2px solid black;
+}
+.formControl > input:focus {
+  outline: none;
+}
+
+.textArea {
+  height: 6rem;
+  width: 100%;
+  resize: none;
+  border: none;
+  border-bottom: 2px solid black;
+  margin-top: 1rem;
+}
+.textArea:focus {
+  outline: none;
+}
+
+.submitBtn {
+  margin: 0 auto;
+  background: #00060f;
+  color: white;
+  border: none;
+  font-size: 1.2rem;
+  padding: 0.7rem 1.2rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.submitBtn:hover {
+  background-color: rgb(56, 56, 255);
 }
