--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,6 +1,23 @@
 .banner {
   min-height: calc(100vh - 5rem);
   background: url("../Assets/bannerRet.png") center/cover no-repeat fixed;
+  word-wrap: break-word;
+  display: flex;
+  align-items: center;
+}
+.bannerContent {
+  max-width: 1170px;
+  width: 90vw;
+  margin: 0 auto;
+}
+.bannerText {
+  color: white;
+  width: 100%;
+  border-radius: 10px;
+  font-size: 1.7rem;
+}
+.bannerText > h1 {
+  /* font-size: 2rem; */
 }
 .secondBanner {
   min-height: 100vh;
@@ -134,6 +151,11 @@
 @media screen and (min-width: 368px) {
   .services > * {
     padding: 2rem;
+  }
+}
+@media screen and (min-width: 567px) {
+  .bannerText {
+    font-size: 2.5rem;
   }
 }
 
