--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -92,7 +92,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
   .socials {
     flex-direction: column;
