--- a/src/components/MainNavigation.module.css
+++ b/src/components/MainNavigation.module.css
@@ -57,7 +57,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    column-gap: 2rem;
+    -moz-column-gap: 2rem;
+         column-gap: 2rem;
   }
   .links > * {
     /* border: 3px solid red; */
