--- a/src/pages/AboutPage.module.css
+++ b/src/pages/AboutPage.module.css
@@ -60,11 +60,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
+    -moz-column-gap: 1rem;
     column-gap: 1rem;
     align-items: center;
   }
   .imgSelf {
     height: 500px;
+    -o-object-fit: cover;
     object-fit: cover;
   }
 }
