--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -63,6 +63,7 @@
 }
 .icon {
   height: 100%;
+  -o-object-fit: contain;
   object-fit: contain;
 }
 .secondBanner {
@@ -81,6 +82,8 @@
 .bannerTitle {
   color: black;
   background-color: white;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto 2rem auto;
   padding: 0.5rem 0.9rem;
@@ -123,6 +126,7 @@
     rgba(255, 255, 255, 0.1),
     rgba(255, 255, 255, 0.1)
   );
+  -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   border-radius: 10px;
   padding: 1rem 0;
@@ -169,6 +173,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    -moz-column-gap: 1rem;
     column-gap: 1rem;
     padding: 3rem 2rem;
   }
