--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,6 +1,6 @@
 .banner {
   min-height: calc(100vh - 5rem);
-  background: url("../Assets/bannerRet.png") center/cover no-repeat fixed;
+  background: #00060f;
   word-wrap: break-word;
   display: flex;
   align-items: center;
@@ -176,5 +176,8 @@
     -moz-column-gap: 1rem;
     column-gap: 1rem;
     padding: 3rem 2rem;
+  }
+  .banner {
+    background: url("../Assets/bannerRet.png") center/cover no-repeat fixed;
   }
 }
