--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -2,11 +2,10 @@
   background-color: #00060f;
   color: white;
   min-height: calc(100vh - 5rem);
-  padding: 1rem 0;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 1)),
     url("../Assets/ContactUs.jpg") center/cover no-repeat;
 }
-.content > h1 {
+.horizontal > h1 {
   text-align: center;
   margin-bottom: 2rem;
   padding-top: 2rem;
@@ -16,7 +15,6 @@
   max-width: 1270px;
   width: 90vw;
   margin: 0 auto;
-  padding: 1rem 0;
   background-color: white;
   color: black;
   padding: 1rem 1rem;
@@ -27,7 +25,9 @@
   padding: 0.5rem;
   border-radius: 10px;
 }
-
+.horizontal {
+  padding-bottom: 2rem;
+}
 .form > * {
   /* border: 3px solid red; */
   display: flex;
@@ -84,15 +84,16 @@
 
 @media screen and (min-width: 768px) {
   .content > h1 {
-    text-align: start;
-    margin-left: 5vw;
+    /* text-align: start; */
+    /* margin: 0 auto; */
     font-size: 2.5rem;
   }
   .contactContent {
-    width: 50%;
-    margin-left: 5%;
+    max-width: 700px;
+    width: 90vw;
   }
-  .content {
+
+  .horizontal {
     padding-bottom: 4rem;
   }
 }
