--- a/src/pages/AboutPage.module.css
+++ b/src/pages/AboutPage.module.css
@@ -26,7 +26,7 @@
 }
 .about1 {
   /* border: 3px solid green; */
-  min-height: calc(100vh - 5rem);
+  /* min-height: calc(100vh - 5rem); */
   padding: 2rem 0;
 }
 .about2 {
