--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -13,7 +13,11 @@
   display: grid;
   place-items: center;
 }
-
+.andItem {
+  color: white;
+  text-align: center;
+  font-size: 2.8rem;
+}
 .bannerText {
   color: white;
   width: 100%;
@@ -197,6 +201,9 @@
   }
   .banner {
     background: url("../Assets/bannerRet.png") center/cover no-repeat fixed;
+  }
+  .andItem {
+    font-size: 4rem;
   }
 }
 
